k8s-2/dr-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: monolith-app
spec:
  host: monolith-app
  subsets:
    - name: version-v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: monolith-app
spec:
  hosts:
    - monolith-app
  http:
    - route:
        - destination:
            host: monolith-app
            subset: version-v1
          weight: 100
